--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Final Assessment</title>
-    <link rel="stylesheet" href="http://localhost:3000/style.css">    
+    <link rel="stylesheet" href="style.css">    
 </head>
 <body>
     <div class="left-div">
@@ -52,12 +52,12 @@
             </div>
         </div>
         <div class="buttons-container">
-            <img id="backward-button" class="image" src="http://localhost:3000/backArrow.png" alt="backArrow">
-            <img class="image" id="forward-button" src="http://localhost:3000/frontArrow.png" alt="frontArrow">
+            <img id="backward-button" class="image" src="backArrow.png" alt="backArrow">
+            <img class="image" id="forward-button" src="frontArrow.png" alt="frontArrow">
         </div>
         
     </div>
-    <script src="http://localhost:3000/dynamic.js"></script>
+    <script src="dynamic.js"></script>
     
 </body>
 </html>
